using System.Collections;
using System.Collections.Generic;
using UnityEngine;

static class AnimatorString
{
    public static readonly string isMoving = "isMoving";
    public static readonly string isJumping = "isJumping";
    public static readonly string isInteractive = "isInteractive";
    public static readonly string isAlive = "isAlive";

    // Trigger
    public static readonly string Attack = "attack";
    public static readonly string Jump = "jump";
    public static readonly string Bow = "Bow";
    public static readonly string Roar = "Roar";
    public static readonly string Spitting = "Spitting";

}